--- a/轮播图.css
+++ b/轮播图.css
@@ -1,10 +1,11 @@
-.box{ position:relative;width:300px;margin: 20px auto;}
+.box{ position:relative;width:600px;margin: 20px auto;}
 .banner>.box>ul>li>img{
     width: 100%;
     height: 300px;
     /*float: left;*/
 }
 .banner>.box>ul>li{
+    width: 100%;
     float: left;
     position: absolute;
     display: none;
@@ -13,7 +14,22 @@
 .image{list-style: none;}
 .left-arrow,.right-arrow{
     position: absolute;
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 30px;
+    cursor: pointer;
     top:100px;
+    display: none;
+}
+.right-arrow{
+    background:url("images/箭头.png") no-repeat;
+    background-size: 100% 100%;
+    -moz-background-size: 100% 100%;
+    right: 0;
+}
+.left-arrow{
+    left: 0;
+    background: url("images/箭头左.png") no-repeat;
+    background-size: 100% 100%;
+    -moz-background-size: 100% 100%;
+
 }
